# fast2ban

./: Cargo.toml  LICENSE  README.md  config.toml
src/: ban_buffer.rs  main.rs  parser.rs  reader.rs
src/parser/: automaton.rs  regex.rs  simd.rs
