[package]
name = "fast2ban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
chrono = "0.4.19"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "1.0.137"
regex-automata = "0.1.10"
lazy_static = "1.4.0"